Panel and Form app Style Addition
In this commit I set the basics styles for the form app (entire app contianer), and the panel (individual containers) components.

--- a/src/stylesheet/panel.css
+++ b/src/stylesheet/panel.css
@@ -3,7 +3,5 @@ These are the style for the panels
 */
 
 .panel {
-  border: 4px dotted black;
-  width: 30%; /*Assumes the it's a full or half screen*/
-  display: inline-block;
+  width: 45.5%;
 }
