--- a/src/stylesheet/utilityStyles.css
+++ b/src/stylesheet/utilityStyles.css
@@ -19,3 +19,9 @@ or are used in multipule components.
 .floatRight {
   float: right;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
